content align and floating buttons solved section_1.css

--- a/section_1.css
+++ b/section_1.css
@@ -22,31 +22,24 @@ a {
 }
 
 .blank_space {
-    width: 10%;
+    width: 15%;
     background-color: #fff;
 }
 
 .button-navbar-2 {
-    font-size: calc(0.8vh + 0.5em);
+    font-size: calc(0.1vh + 1em);
     border: none;
     color: rgb(68, 68, 68);
     display: inline-flex;
     text-align: center;
     align-items: center;
     background-color: #fff;
-    gap: 1rem;
+    gap: 0.5rem;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    padding: 0 1rem;
 }
-
-
-/* .svg {
-    align-items: center;
-    justify-content: center;
-}
-creo que esto no sirve, pero no se por que no provoca cambios
-*/
 
 
 a:visited {
@@ -61,8 +54,6 @@ a:visited {
 
 
 /* hidden elements */
-
-
 /* My Nintendo Store Hidden Element 1*/
 .ns {
     display: flex;
@@ -122,17 +113,16 @@ a:visited {
 }
 
 .close-button-ns-container {
-    position: relative; /* To control the button's position */
-    display: inline; /* Initially hide the element */
+    position: absolute; 
+    display: inline; 
     background-color: #f2f2f2;
-    border-radius: 50%; /* Make it circular */
-    width: 3px; /* Adjust the size as needed */
-    height: 3px; /* Adjust the size as needed */
+    border-radius: 50%; 
+    width: 3px; 
+    height: 3px; 
     text-align: center;
     padding: 22px;
     color: #e60013ff;
-    position: absolute;
-    top: 12vh;
+    top: 7rem;
     right: 5vh;
   }
   
@@ -184,7 +174,9 @@ a:visited {
     border-radius: 15px;
 }
 
-.close-button2 {
+.close-button2,
+.close-button3,
+.close-button4 {
     position: absolute;
     top: 10px;
     right: 10px;
@@ -193,7 +185,9 @@ a:visited {
     cursor: pointer;
 }
 
-.close-button2 span {
+.close-button2 span,
+.close-button4 span,
+.close-button3 span {
     font-size: 24px;
     line-height: 1;
 }
@@ -208,20 +202,42 @@ a:visited {
     padding: 22px;
     color: #e60013ff;
     position: absolute;
-    top: 12vh;
+    top: 10vh;
     right: 5vh;
 }
 
-.hidden-games-options {
+.hidden-games-options,
+.hidden-nswitch-options,
+.hidden-playnintendo-options {
+    display: flex;
     font-size: 1rem;
     justify-content: center;    
     align-content: center;
 }
+
 .svg-games {
     align-content: center;
     border: 1px solid lightgrey;
     padding: 1rem 3rem;
     border-radius: 15px;
+}
+
+.hidden-ns-title {
+    display: flex;
+}
+
+#svg-ns-1 {
+    align-self: center;
+    padding: 0 5px;
+}
+
+.svg-mns {
+    display: flex;
+}
+
+.svg-ns {
+    align-self: center;
+    padding: 0 5px
 }
 
 /* Nintendo Switch Hidden Element 3*/
@@ -261,19 +277,6 @@ a:visited {
     border-radius: 15px;
 }
 
-.close-button3 {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: rgb(169, 167, 167);
-    border: none;
-    cursor: pointer;
-}
-
-.close-button3 span {
-    font-size: 24px;
-    line-height: 1;
-}
 
 .close-button-nswitch-container {
     position: relative; 
@@ -285,8 +288,8 @@ a:visited {
     padding: 22px;
     color: #e60013ff;
     position: absolute;
-    top: 12vh;
-    right: 5vh;
+    top: 10vh;
+    right: 3em;
 }
 
 .nswitch-img {
@@ -334,15 +337,6 @@ a:visited {
     border-radius: 15px;
 }
 
-.close-button4 {
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    background: rgb(169, 167, 167);
-    border: none;
-    cursor: pointer;
-}
-
 .svg-playnintendo {
     align-content: center;
     border: 1px solid lightgrey;
@@ -350,13 +344,9 @@ a:visited {
     border-radius: 15px;
 }
 
-.close-button4 span {
-    font-size: 24px;
-    line-height: 1;
-}
 
 .close-button-playnintendo-container {
-    position: relative; 
+    position: absolute; 
     background-color: rgb(169, 167, 167);
     border-radius: 50%; 
     width: 3px; 
@@ -364,8 +354,7 @@ a:visited {
     text-align: center;
     padding: 22px;
     color: #e60013ff;
-    position: absolute;
-    top: 12vh;
+    top: 10vh;
     right: 5vh;
 }
 
@@ -381,40 +370,44 @@ a:visited {
     display: none;
 }
 
-/* he intentado resumir esto, pero no funciona cuando uso las clases de los hidden objects */
 .ns div, 
 .ns-shop-btn-container,
 .games_dropdown div,
 .playnintendo_dropdown,
 .nswitch_dropdown,
-button
- {
+button {
     display: none;
 }
 }
     
-@media  (max-width: 1200px) {
+@media  (max-width: 1300px) {
 .blank_space {
-    display: none;
+    width: 5%;
 }
     
 .button-navbar-2 {
-    font-size: calc(0.4vh + 0.5em);
+    font-size: calc(1rem + 0.1vw);
 }
 }
     
 @media  (max-width: 1400px) {
 .button-navbar-2 {
-    font-size: calc(0.5vh + 0.5em);
+    font-size: calc(1rem + 0.1vw);
 }
 }
 
+@media  (min-width: 1800px) {
+    .blank_space {
+        width: 25%;
+    }
+    .navbar_2_container {
+        font-size: 0.8rem;
+    }
+}
 
+  
   /* falta: 1. cambiar fuente (al hacer merge), 
-  2. corregir align icono svg del desplegable de my nintendo store y todos los demas svg. 
-  3. centrar p dropdown games, nintendo switch y play nintendo. 
   4. añadir a js que, al abrir una seccion, se cierre la anterior y no se acumulen los hidden elements (hay codigo comentado en js pero no funciona bien, impide a los hidden elements que se abran). 
   5. arreglar boton close para que no flote, sino que este en cada seccion y no absoluto (aunque quiza no hace falta una vez se cierren automaticamente los elementos al clicar en otros botones). 
-  6. arreglar media queries
-  7. arreglar close btn
   9. hay alguna forma de hacer que los svg introducidos como codigo cambien de color al hacer hover? (primer y ultimo svg del navbar2 lo hacen, pero los tres centrales, no)*/
+
